languages/montiarc-fe/src/test/resources/unused/contextconditions/invalid/SuperTest.java_
package invalid;

//TODO: Unused?
public class SuperTest {
  public Double d = 1.0;  
}
